add config for github

--- a/views/projects.pug
+++ b/views/projects.pug
@@ -14,7 +14,7 @@ block content
             | smooth page transitions using the View Transitions API, and GSAP animations.
             | Includes a contact form with Mailgun integration, XSS sanitisation, and CDN-optimised caching.
           .project-links
-            a.btn(href="https://github.com/jordancolehunt/jordancolehunt.com", target="_blank") GitHub
+            a.btn(href=`${githubUrl}/jordancolehunt.com`, target="_blank") GitHub
           .tech-stack
             span.tag NestJS
             span.tag TypeScript
