--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,13 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(name="theme-color", content="#0a192f")
     title= title || "Jordan Cole Hunt"
+
+    //- Favicon
+    link(rel="icon", type="image/svg+xml", href="/favicon.svg")
+    link(rel="alternate icon", href="/favicon.svg")
+    link(rel="apple-touch-icon", href="/favicon.svg")
     link(rel="stylesheet", href="/styles/main.css")
     link(rel="stylesheet", href="/styles/transitions.css")
     link(rel="stylesheet", href="/styles/components.css")
