--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,6 +17,9 @@ html(lang="en")
     link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
     link(href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap", rel="stylesheet")
 
+    //- Lucide Icons
+    script(src="https://unpkg.com/lucide@latest")
+
   body(data-page=page || "")
     //- Navigation (persistent across all pages)
     include mixins/nav
